<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.libraryguest2.hw2.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addexpense"
        android:layout_marginTop="15dp"
        android:id="@+id/btnaddexpense" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editexpense"
        android:layout_marginTop="15dp"
        android:id="@+id/btneditexpense" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteexpense"
        android:layout_marginTop="15dp"
        android:id="@+id/btndeleteexpense" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showexpenses"
        android:layout_marginTop="15dp"
        android:id="@+id/btnshowexpenses" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="15dp"
        android:id="@+id/btnfinish" />
</LinearLayout>
