<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context="com.example.libraryguest2.hw2.AddExpense">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labeladdexpense"
        android:id="@+id/tvlabeladdexpense"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expensename"
        android:layout_marginTop="10dp"
        android:id="@+id/tvexpensename" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etname"
        android:layout_marginTop="10dp"
        android:maxLength="50"
        android:text="@string/nullvalue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="10dp"
        android:id="@+id/textView3" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addspinnercategory"
        android:layout_marginTop="5dp"
        android:spinnerMode="dialog"
        android:prompt="@string/selectcategory"
        android:entries="@array/Categories"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:layout_marginTop="10dp"
        android:id="@+id/tvamount" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etamount"
        android:text="@string/nullvalue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="10dp"
        android:id="@+id/tvdate" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight="3"
            android:ems="10"
            android:id="@+id/etdate"
            android:layout_marginTop="5dp"
            android:text="@string/nullvalue" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivdate"
            android:src="@mipmap/calendar" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        android:layout_marginTop="15dp"
        android:id="@+id/tvreceipt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivreceipt"
        android:layout_marginTop="5dp"
        android:src="@mipmap/receipt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addexpense"
        android:layout_marginTop="10dp"
        android:id="@+id/addbtnaddexpense" />

</LinearLayout>
