<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context="com.example.libraryguest2.hw2.DeleteExpense">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectexpense"
        android:layout_gravity="center"
        android:id="@+id/deletebtnselectexpense" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expensename"
        android:layout_marginTop="10dp"
        android:id="@+id/deletetvexpensename" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteetexpensename"
        android:text="@string/nullvalue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="10dp"
        android:id="@+id/deletetvcategory" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deletespinnercategory"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:layout_marginTop="5dp"
        android:id="@+id/deletetvamount" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteetamount"
        android:text="@string/nullvalue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="10dp"
        android:id="@+id/deletetvdate" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight="10"
            android:id="@+id/deleteetdate"

            android:text="@string/nullvalue" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteivcalendar"
            android:layout_weight="1"
            android:src="@mipmap/calendar" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt"
        android:layout_marginTop="10dp"
        android:id="@+id/deletetvreceipt" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteivreeceipt"
        android:src="@mipmap/receipt" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deletebutton"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:id="@+id/deletebtndelete" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginTop="15dp"
            android:id="@+id/deletebtncancel" />
    </TableRow>

</LinearLayout>
